this day closed. i need to sleep

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,3 +1,13 @@
 #tengah {
 	background-color: #D9F0FF;
 }
+
+#ajukan {
+	border-radius: 30px;
+}
+
+#btn-pertanyaan {
+	border-style: none;
+	background-color: black;
+	color: white;
+}
