--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,7 +1,3 @@
-body {
-	font-family: 'ProximaNova', 'Helvetica', 'Arial', 'sans-serif';
-}
-
 #tengah {
 	background-color: #D9F0FF;
 }
@@ -20,16 +16,15 @@ body {
 	background-color: #F5F8FA;
 }
 
-.scrollmenu {
-	overflow: scroll;
+div.scrollmenu {
+	overflow: auto;
 	white-space: nowrap;
 
 }
 
-.kat-blok {
+div.kat-blok {
 	display: inline-block;
 	margin: 15px 0px;
-	white-space: nowrap;
 }
 
 div.scollmenu img {
